--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,6 @@ scikit_learn == 0.19.0
 # required by benchmarks
 # randomstate == 1.13.2
 # Cython == 0.26.1
+
+# required by integration_test.py
+xgboost==0.6a2
