--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
             . venv/bin/activate
             ./tests/benchmark_originality.py
             ./tests/test_server_unittests.py
+            ./tests/integration_test.py
       - run:
           name: Install AWS CLI
           command: |
